--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,7 @@ jobs:
     runs-on: ubuntu--latest
     steps:
     - name: checkRoot
-    - run: pwd
-    - name: checkRoot
-    - run: pwd
+      run: pwd
+    
         
     
