--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     
 jobs:
   build:
-    runs-on: ubuntu--latest
+    runs-on: ubuntu-latest
     steps:
     - name: checkRoot
       run: pwd
