--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
       run : ls -al
     - name: check disk
       run : df -h
+    - name : Node execution
+      run : node index.js
     
         
     
