--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,9 @@ jobs:
     - name: check disk
       run : echo df -h >> disk.txt
     - name : GEN file
-      run : touch index.js
+      run : |
+        cd ~
+        touch index.js
 
     
         
