--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
     - name: checkRoot
-      run: echo pwd
+      run: pwd
     - name: check disk
       run : echo df -h >> disk.txt
     - name : GEN file
